--- a/projects.qmd
+++ b/projects.qmd
@@ -10,4 +10,9 @@ listing:
 page-layout: full
 ---
 
+<meta http-equiv='cache-control' content='no-cache'> 
+<meta http-equiv='expires' content='0'> 
+<meta http-equiv='pragma' content='no-cache'>
+
+
 Here are some snippets of my work projects and my in-depth personal projects, tutorials, and blog.
