--- a/index.qmd
+++ b/index.qmd
@@ -32,36 +32,36 @@ page-layout: full
 
 I have always loved consuming stories and solving puzzles. Unfortunately, neither of those pay my dog's dermatology bills or the rent. Unless data is the puzzle and I tell its story.
 
-<p>*As of November, 2023, I began my position as a [Statistical Data Analyst at Wash U](https://insideartsci.wustl.edu/people/jayde-homer). I'm excited to help make data-driven decisions that supports graduate student success. *&#x1F389;</p>
+<p>*As of November, 2023, I began my position as a [Statistical Data Analyst at Washington University in St. Louis](https://insideartsci.wustl.edu/people/jayde-homer). I'm excited to help make data-driven decisions and support graduate student success. *&#x1F389;</p>
 
 :::
 
-You're probably here because you want to know more about what I'm up to. You can head over to my [Projects](https://jaydehomer.github.io/projects.html) for a quick overview of my academic projects and check out my blog, where I play around with fun data, explain parts of my process, and answer questions about things I'm personally interested in; you might learn something about Taylor Swift, birds, books, [dogs](https://jaydehomer.github.io/zaya.html), or a cool package in R. Have fun exploring and don't hesitate to [reach out](https://jaydehomer.github.io/contact.html) with questions or gentle critiques.
+You're probably here because you want to know more about what I'm up to. You can head over to my [Projects](https://jaydehomer.github.io/projects.html) for a quick overview of my academic projects and check out my blog, where I play around with fun data, explain parts of my process, and answer questions about things I'm personally interested in; you might learn something about my hobbies, random questions I have, [dogs](https://jaydehomer.github.io/zaya.html), or a cool package in R. Have fun exploring and don't hesitate to [reach out](https://jaydehomer.github.io/contact.html) with questions or gentle critiques.
 
 ----
 
-## Experience
+## Past Professional Experiences
 
-**Research** | [Rebecca Treiman and Brett Kessler](https://sites.wustl.edu/readingandlanguagelab/) | studying patterns in children and adults' spelling
+**Academic Research** | [Reading and Language Lab at Washington University in St. Louis](https://sites.wustl.edu/readingandlanguagelab/) | Infant Studies Lab (retired) at University of Notre Dame | [SEEDLingS at University of Rochester] (https://bergelsonlab.com/seedlings/about-us.html)
 
-**Data** | [Sally Wu at Wash U's Center for Teaching and Learning](https://ctl.wustl.edu/edtech/) | exploring  faculty, staff, and students' use of licensed educational technologies
+**Data Analytics** | [Center for Teaching and Learning Ed. Tech](https://ctl.wustl.edu/edtech/) 
 
-**Teaching** | [tutor](https://www.wyzant.com/Tutors/Jayde) stats with R | taught developmental psychology course and assisted in 10+ undergrad and grad-level courses
+**Teaching** | Developmental Psychology | Psych. Stats | [Private Tutoring](https://www.wyzant.com/Tutors/Jayde)
 
-**Etc** | potpourri of life experiences in food service, warehousing, transportation, healthcare finance, and childcare industries
+**Etc.** | potpourri of life experiences in food service, warehousing, transportation, healthcare finance, and childcare industries
 
 ----
 
 ## Education 
 
-**BS** | Brain & Cognitive Sciences | University of Rochester | 2016
- 
-**BA** | Linguistics | University of Rochester | 2016
+**PhD** | Psychological & Brain Sciences | Washington University in St. Louis | 2023
+
+**Graduate Certificate** | Quantitative Analysis | Washington University in St. Louis | 2023
 
 **MA** | Psychological & Brain Sciences | Washington University in St. Louis | 2021
  
-**PhD** | Psychological & Brain Sciences | Washington University in St. Louis | 2023
+**BS** | Brain & Cognitive Sciences | University of Rochester | 2016
  
-**Etc** | Certificate in Quantitative Analysis (Wash U) | 2023
+**BA** | Linguistics | University of Rochester | 2016
 
 ----
