--- a/posts/OLC 2024/index.qmd
+++ b/posts/OLC 2024/index.qmd
@@ -40,3 +40,6 @@ In April 2024, I got the chance to present some of my work from my Ed Tech fello
 -----
 
 ![](slides/Slide10.png)
+-----
+
+![](slides/Slide11.png)
