updates and NEXT post

--- a/contact.qmd
+++ b/contact.qmd
@@ -12,6 +12,6 @@ title: "CV/Contact"
 
 *uni email:* jaydehomer at wustl dot edu
 
-If you can't find me, check my local bookstores: [Left Bank Books](https://www.left-bank.com/) or [Subteranean](https://store.subbooks.com/).
+If you can't find me, check Forest Park or my local bookstores: [Left Bank Books](https://www.left-bank.com/) or [Subterranean](https://store.subbooks.com/).
 
 ![](pics/bookstorejayde.jpg){width=20%}
