One more next update

--- a/posts/NEXT Award/index.qmd
+++ b/posts/NEXT Award/index.qmd
@@ -32,7 +32,7 @@ I am in full-planning mode now and eager to start my trip in less than a month! 
 
 ## First up: WASHINGTON
 
-In early June, I'll arrive in Seattle, where I'll be picked up by my college roommate turned bff, Sarah. Sarah is a super cool gal serving as a XXX in the Navy. From there, we'll head to Mt. Rainier National Park to kickoff my journey. After Mt. Rainier, we'll return to her home on Whidbey Island to rest and prepare to run the North Olympic Discovery Marathon on June 8. This will be my first (and maybe only) marathon! I've been training for months and somehow nearly all of my long Saturday runs have been in the pouring rain; I'm ready to take on a PNW marathon. The [trail will be gorgeous](https://nodm.com/nodm-marathon-race/) and I've been promised seal and eagle sightings. 
+In early June, I'll arrive in Seattle, where I'll be picked up by my college roommate turned bff, Sarah. Sarah is a super cool gal serving as an Officer in the Navy. From there, we'll head to Mt. Rainier National Park to kickoff my journey. After Mt. Rainier, we'll return to her home on Whidbey Island to rest and prepare to run the North Olympic Discovery Marathon on June 8. This will be my first (and maybe only) marathon! I've been training for months and somehow nearly all of my long Saturday runs have been in the pouring rain; I'm ready to take on a PNW marathon. The [trail will be gorgeous](https://nodm.com/nodm-marathon-race/) and I've been promised seal and eagle sightings. 
 
 Okay, back to the real purpose of this trip. 
 
