--- a/posts/NEXT Award/index.qmd
+++ b/posts/NEXT Award/index.qmd
@@ -6,7 +6,7 @@ categories: [NEXT]
 image: "NEXTmap.png"
 ---
 
-For the past few years, I saw the email come into my inbox calling applicants for the [Newman Exploration Travel Fund (NEXT)](https://library.washu.edu/about/competitions-awards/newman-exploration-travel-fund/) supported by [WashU Libraries](https://library.washu.edu/), pondered what I would ever submit, and deleted the email. A few months later, I would envy the winners and [admire their travels](https://openscholarship.wustl.edu/next_posters/). This year, however, I pondered a little longer and a few days before the deadline, I whipped up [this proposal](/Homer_NEXTproposal_2025.pdf).
+For the past few years, I saw the email come into my inbox calling applicants for the [Newman Exploration Travel Fund (NEXT)](https://library.washu.edu/about/competitions-awards/newman-exploration-travel-fund/) supported by [WashU Libraries](https://library.washu.edu/), pondered what I would ever submit, and deleted the email. A few months later, I would envy the winners and [admire their travels](https://openscholarship.wustl.edu/next_posters/). This year, however, I pondered a little longer and a few days before the deadline, I whipped up [this proposal](Homer_NEXTproposal_2025.pdf).
 
 A few weeks later, I received this email: 
 
